# truenex-promoter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: USER_GUIDE.md
src/truenex_promoter/: __init__.py  __main__.py  action_queue.py  awesome_finder.py  config.py  content_generator.py  devto_generator.py  github_monitor.py  hardware_analyzer.py  llm_adapter.py  notifier.py  producthunt_generator.py  stackoverflow_finder.py
src/truenex_promoter/actions/: __init__.py  base.py
src/truenex_promoter/backends/: __init__.py  llama_cpp_backend.py  openai_compatible.py
src/truenex_promoter/executors/: __init__.py  awesome_pr.py  base.py  devto_article.py  producthunt_launch.py  social_post.py  stackoverflow_answer.py
tests/: __init__.py  test_action_queue.py
