[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truenex-promoter"
version = "0.1.0-alpha.1"
description = "Autonomous AI marketing agent for open-source projects"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Marco Comunita", email = "marco@truenex.ai" },
]
keywords = ["marketing", "open-source", "github", "promotion", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Pure stdlib for the core — zero external deps
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
trnx-promoter = "truenex_promoter.__main__:main"

[project.urls]
Homepage = "https://promoter.truenex.ai"
Repository = "https://github.com/marcomnit/truenex-promoter"
Issues = "https://github.com/marcomnit/truenex-promoter/issues"
Changelog = "https://github.com/marcomnit/truenex-promoter/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
